--- a/cafemapapp/templates/cafemapapp/onemarker.html
+++ b/cafemapapp/templates/cafemapapp/onemarker.html
@@ -6,25 +6,37 @@
 
         <script src="http://code.jquery.com/jquery-latest.min.js"></script>
         <link rel="stylesheet" href='/static/css/studycafeMap.css'>
-        
-        
-
     </head>
     <body>
-        <div class="home">
+        <!-- <div class="home">
         <a href="/"><img class="homebtn" src="/static/images/homebtn.png"/></a></div>
-        <h2>스터디카페 찾기</h2>        
+        <h2>스터디카페 찾기</h2>-->
+        <div class="top-bar">
+            <a href="/"><img class="home-btn" src="/static/home-img.png"></a>        
+            <h2>스터디카페 찾기</h2>
+        </div>
 
-        {% comment %} <div class="studybtn" align="right">
+        {% comment %}
+        <div class="container" style="margin-top: 150px;">
+            <div class="studybtn" align="right">
+                <button onclick="location.href='/scainfo/all/'">목록으로 보기</button>
+                <button onclick="location.href='/study/'">개설 스터디 현황</button>
+            </div>
+        </div>
+        {% endcomment %}
+
+        <!-- {% comment %}
+        <div class="studybtn" align="right">
             <button onclick="location.href='/scainfo/all/'" >목록으로 보기</button >
             <button onclick="location.href='/study/'" >개설 스터디 현황</button >
-            </div> {% endcomment %}
-
+        </div>
+        {% endcomment %} -->
 
         <div id="map"></div>
         <script
             type="text/javascript"
-            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e5546ce50e2833e4db42b281b4b23109&libraries=services"></script>
+            src="//dapi.kakao.com/v2/maps/sdk.js?appkey=e5546ce50e2833e4db42b281b4b23109&libraries=services">
+        </script>
         <script>
             var mapContainer = document.getElementById('map'), // 지도를 표시할 div
                 mapOption = {
