--- a/cafemapapp/templates/cafemapapp/studytest.html
+++ b/cafemapapp/templates/cafemapapp/studytest.html
@@ -4,16 +4,28 @@
         <meta charset="utf-8">
         <title>스터디 현황</title>
         <link rel="stylesheet" href='/static/css/studycafeMap.css'>
-
     </head>
     <body>
-        <div class="home">
+        <div class="top-bar">
+            <a href="/"><img class="home-btn" src="/static/home-img.png"></a>        
+            <h2>스터디 현황</h2>
+        </div>
+        
+        <div class="container" style="margin-top: 150px;">
+            <div class="studybtn" align="right">
+                <button onclick="location.href='/blog/'" >목록으로 보기</button >
+                <button onclick="location.href='/scamap/'">내 주변 스터디카페</button >
+            </div>
+        </div>
+
+        <!-- <div class="home">
         <a href="/"><img class="homebtn" src="/static/images/homebtn.png"/></a></div>
         <h2>스터디 현황</h2>
         <div class="studybtn" align="right">
             <button onclick="location.href='/blog/'" >목록으로 보기</button >
             <button onclick="location.href='/scamap/'">내 주변 스터디카페</button >
-        </div>
+        </div> -->
+
         <div id="map"></div>
 
 
