찜버튼변경완료

--- a/scainfoapp/templates/scainfoapp/all.html
+++ b/scainfoapp/templates/scainfoapp/all.html
@@ -102,7 +102,12 @@
 
                 <script>
                     function btn(){
-                        swal("찜 완료");}
+                        swal({
+                            title: ' ',
+                            text: "찜 완료!",
+                            timer: 0 ,
+                          });
+                    }
                 </script>
                  
                 </body>
