--- a/scainfoapp/templates/scainfoapp/sca_detail.html
+++ b/scainfoapp/templates/scainfoapp/sca_detail.html
@@ -6,6 +6,7 @@
     initial-scale=1.0">
         <title>{{studycafe.name}}</title>
         <link rel="stylesheet" href='/static/css/detail.css'>
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     </head>
     <body>
         <div class="home">
@@ -29,7 +30,7 @@
                             <form method='post' action=''>
                                 {% csrf_token %}
                                 <input type="hidden" name="like_button" value="{{studycafe.id}}">
-                                <span class="lb"><button class="likebtn" type="submit">찜하기</button></span>
+                                <span><button id="likebtn" style= "background-color:transparent; border: none;" class="likebtn" type="submit" onclick="btn()">❤️</button></span>
                             </form> </div><div style="clear:both;"></div> 
                         
                             
@@ -93,6 +94,13 @@
         </div>
                 <br></br>
             <p></p>
+            <script>
+                function btn(){
+                    swal("찜 완료");}
+            </script>
+             
             
                 </body>
+
+
             </html>
