--- a/cafemapapp/static/css/studycafeMap.css
+++ b/cafemapapp/static/css/studycafeMap.css
@@ -44,6 +44,13 @@
     border: #734A32 solid;
 }
 
+.info{
+    width: 60%;
+    margin: auto;
+    margin-top: 100px;
+    text-align: center;
+}
+
 .customoverlay {position:relative;bottom:85px;border-radius:6px;border: 1px solid #ccc;border-bottom:2px solid #ddd;float:left;}
 .customoverlay:nth-of-type(n) {border:0; box-shadow:0px 1px 2px #888;}
 .customoverlay a {display:block;text-decoration:none;color:#000;text-align:center;border-radius:6px;font-size:14px;font-weight:bold;overflow:hidden;background: #734A32;background: #734A32 url(https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/arrow_white.png) no-repeat right 14px center;}
