--- a/userlocation/templates/write.html
+++ b/userlocation/templates/write.html
@@ -1,40 +1,69 @@
 {% extends "base.html" %}
 {% block contents %}
-
 <html>
     <head>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
         <link href="https://cdn.quilljs.com/1.3.6/quill.snow.css" rel="stylesheet">
-        <link rel="stylesheet" href="/static/style.css">
+        <!-- <link rel="stylesheet" href="/static/style.css"> -->
         <link href="/static/font1.css" type="text/css" rel="stylesheet">
     </head>
     <body>
-        <div class="main-title">
-            <div class="overlay">
-                <form method="POST" action=".">
-                    {% csrf_token %}
-                    <div>
-                        <svg style="width:24px;height:24px" viewBox="0 0 24 24">
-                            <path fill="currentColor" d="M5.5,21C4.72,21 4.04,20.55 3.71,19.9V19.9L1.1,10.44L1,10A1,1 0 0,1 2,9H6.58L11.18,2.43C11.36,2.17 11.66,2 12,2C12.34,2 12.65,2.17 12.83,2.44L17.42,9H22A1,1 0 0,1 23,10L22.96,10.29L20.29,19.9C19.96,20.55 19.28,21 18.5,21H5.5M12,4.74L9,9H15L12,4.74M12,13A2,2 0 0,0 10,15A2,2 0 0,0 12,17A2,2 0 0,0 14,15A2,2 0 0,0 12,13Z" />
-                        </svg>
-                        <h1>위치 등록</h1>
-                        <span>주소를 입력해주세요.</span>
-                    </div>
+        <div class="top-bar"
+            style="position: fixed; top: 0;
+                    left: 0;
+                    width: 100%;
+                    background-color: white;
+                    color: #324028;
+                    padding: 10px;
+                    z-index: 9999;
+                    height: 70px;
+                    border-bottom: 1px solid gainsboro;">
+            <a href="/"><img class="home-btn" src="/static/home-img.png"
+                style="display:block; position: absolute; top: 20px; right: 50px; left: 34px; width: 30px; height: 30px; background-size: cover;"/></a>        
+            <h2 style="margin-left: 80px; margin-top: 5px;">위치 등록</h2>
+        </div>
+
+        <div style="display: flex; justify-content: center; align-items: center; height: 200px; margin-top: 100px;">
+            <img src="/static/location.png" style="height: 100px;">
+        </div>
+
+        <div class="container" style="margin-top: 30px;">
+            <div class="main-title">
+                <div class="overlay">
+                    <form method="POST" action=".">
+                        {% csrf_token %}
                 </div>
             </div>
             <div class="product-content">
                 <div class="product-write">
                     <form enctype="multipart/form-data" method="post" action="/write" id="write-form">
-
+                        <div class="form-group" style="display: flex; justify-content: center;">
+                            <input type="text" class="form-control" id="location" name="location" style=" width: 300px;" placeholder="주소 찾기를 통해 주소를 입력해 주세요.">
+                            <button type="button" class="ml-2 btn btn-sm btn-outline-secondary" onclick="sample2_execDaumPostcode()">주소 찾기</button>
+                            <div id="layer" style="display:none;position:fixed;overflow:hidden;z-index:1;-webkit-overflow-scrolling:touch;">
+                                <img src="//t1.daumcdn.net/postcode/resource/images/close.png" id="btnCloseLayer" style="cursor:pointer;position:absolute;right:-3px;top:-3px;z-index:1" onclick="closeDaumPostcode()" alt="닫기 버튼">
+                            </div>
+                        </div>
+                        <div class="text-right" style="display: flex; justify-content: center; margin-top: 50px;">
+                            <a role="button" href="/" class="btn btn-secondary">취소</a>
+                            <span style="margin: 0 5px;"></span>
+                            <button type="submit" onclick="javascript:btn()" class="btn btn-primary">등록</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <!-- <div class="product-content">
+                <div class="product-write">
+                    <form enctype="multipart/form-data" method="post" action="/write" id="write-form">
                         <div class="form-group">
                             <label for="location">지역</label>
                             <button type="button" class="ml-2 btn btn-sm btn-outline-dark" onclick="sample2_execDaumPostcode()">주소찾기</button>
                             <div id="layer" style="display:none;position:fixed;overflow:hidden;z-index:1;-webkit-overflow-scrolling:touch;">
                                 <img src="//t1.daumcdn.net/postcode/resource/images/close.png" id="btnCloseLayer" style="cursor:pointer;position:absolute;right:-3px;top:-3px;z-index:1" onclick="closeDaumPostcode()" alt="닫기 버튼">
                             </div>
-                            <input type="text" class="form-control" id="location" name="location">
+                            <input type="text" class="form-control" id="location" name="location" style="width: 500px;" placeholder="주소를 입력해 주세요.">
                         </div>
                         <div class="text-right">
                             <a role="button" href="/" class="btn btn-secondary">취소</a>
@@ -42,7 +71,9 @@
                         </div>
                     </form>
                 </div>
-            </div>
+            </div> -->
+        </div>
+
             <!-- Include the Quill library -->
             <script src="https://cdn.quilljs.com/1.3.6/quill.js"></script>
 
@@ -114,14 +145,11 @@
                     element_layer.style.top = (((window.innerHeight || document.documentElement.clientHeight) - height)/2 - borderWidth) + 'px';
                 }
             </script>
-
-
             <script>
                 function btn(){
                     alert('위치등록 완료.');
                 }
-            </script>
-                
-        </body>
-    </html>
-    {% endblock %}
+            </script> 
+    </body>
+</html>
+{% endblock %}
