검색결과 정렬하는 기능과 페이징처리

--- a/scainfoapp/templates/scainfoapp/sca_detail.html
+++ b/scainfoapp/templates/scainfoapp/sca_detail.html
@@ -20,7 +20,7 @@
                 <div class="card">                    
                     <div class="card-body">
                         <div class="imgbox">
-                        <img class="scaimg" src="https://search.pstatic.net/common/?src=https%3A%2F%2Fldb-phinf.pstatic.net%2F20191218_102%2F1576635755959dX1j9_JPEG%2F9bKVI9kiwzcnLfKPlBcCUSlR.jpg"></img>
+                        <img class="scaimg" src="{{studycafe.sca_image}}"></img>
                         </div>
                         {% comment %} <p>{{sca.id}}</p> {% endcomment %}
                         <div class="card-title">
