--- a/scainfoapp/templates/scainfoapp/sort_star.html
+++ b/scainfoapp/templates/scainfoapp/sort_star.html
@@ -15,9 +15,9 @@
         
         <div class="sort" align="right">
             <select title="" onchange="window.location.href=this.value">
-                <option value="http://127.0.0.1:8000/scainfo/all/">기본 순</option>                
-                <option value="http://127.0.0.1:8000/scainfo/sort_star/" selected>별점 순</option>
-                <option value="http://127.0.0.1:8000/scainfo/sort_review/">리뷰 많은 순</option>
+                <option value="/scainfo/all/">기본 순</option>                
+                <option value="/scainfo/sort_star/" selected>별점 순</option>
+                <option value="/scainfo/sort_review/">리뷰 많은 순</option>
             </select>
         </div>
 
