--- a/scainfoapp/templates/scainfoapp/all.html
+++ b/scainfoapp/templates/scainfoapp/all.html
@@ -15,9 +15,9 @@
         <h2 style="text-align: center;">스터디카페 목록</h2>
         <div class="sort" align="right">
         <select title="" onchange="window.location.href=this.value">
-            <option value="http://127.0.0.1:8000/scainfo/all/" selected>기본 순</option>
-            <option value="http://127.0.0.1:8000/scainfo/sort_star/">별점 순</option>
-            <option value="http://127.0.0.1:8000/scainfo/sort_review/">리뷰 많은 순</option>
+            <option value="/scainfo/all/" selected>기본 순</option>
+            <option value="/scainfo/sort_star/">별점 순</option>
+            <option value="/scainfo/sort_review/">리뷰 많은 순</option>
         </select>
     </div>
 
