--- a/scainfoapp/templates/scainfoapp/like.html
+++ b/scainfoapp/templates/scainfoapp/like.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href='/static/css/home.css'>
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.6.3.min.js" integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
-    
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     </head>
     <body>
         <div class="home">
@@ -33,7 +33,7 @@
 
         <div class="container">
             {% for sca in posts %}
-                <div class="card">
+                <div class="card" style="border: 2px solid #734A32;">
                     <div class="card-body" onclick="location.href='/scainfo/detail/{{sca.id}}'">
                         {% comment %} <p>{{sca.id}}</p> {% endcomment %}
                         <h4 class="card-title">{{sca.name}} </h4><div class="like">
@@ -105,7 +105,7 @@
                   
                     
                     function btn(){
-                        swal('찜 해제!');
+                        alert("찜 해제!");
                     }
                 </script>
 
