--- a/scainfoapp/templates/scainfoapp/sca_detail.html
+++ b/scainfoapp/templates/scainfoapp/sca_detail.html
@@ -17,7 +17,7 @@
 
         <div class="container">
             {% comment %} {% for sca in posts %} {% endcomment %}
-                <div class="card">                    
+                <div class="card" style=" border: 2px solid #734A32; border-radius:10px;">                    
                     <div class="card-body">
                         <div class="imgbox">
                         <img class="scaimg" src="{{studycafe.sca_image}}"></img>
@@ -96,7 +96,7 @@
             <p></p>
             <script>
                 function btn(){
-                    swal("찜 완료");}
+                    alert("찜 완료");}
             </script>
              
             
