--- a/scainfoapp/templates/scainfoapp/search_result.html
+++ b/scainfoapp/templates/scainfoapp/search_result.html
@@ -7,6 +7,7 @@
         <title>스터디카페 목록</title>
         <link rel="stylesheet" href='/static/css/home.css'>
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     </head>
     <body>
         <div class="home">
@@ -15,11 +16,12 @@
         <div class="sort" align="right">
             <form method='post' action='{% url 'hashtag' %}'>
                 {% csrf_token %}
-                <select title="" name="sort_button" onchange="this.form.submit()" onclick='selectedControl()'>
-                <option value="1">기본 순</option>
-                <option value="2">별점 순</option>
-                <option value="3">리뷰 많은 순</option>
+                <select title="" name="sort_button" onchange="this.form.submit()" id="tmpSelect">
+                <option id="a" value="1">기본 순</option>
+                <option id="b" value="2">별점 순</option>
+                <option id="c" value="3">리뷰 많은 순</option>
             </select>
+            <div class = "div1"></div>
             {% comment %} <button class="btn btn-primary" type="submit">검색</button> {% endcomment %}
             </form>
             
@@ -27,15 +29,17 @@
         <div class="tag" align="left">
         <form method='post' action='{% url 'hashtag' %}'>
             {% csrf_token %}
-            <input type="text" name="search_button" value="{{keyword}}" style="width:300px; background-color: rgb(242, 242, 242)" onfocus="this.placeholder=''" onblur="this.placeholder='관련 해시태그 검색'">
-            <button class="btn btn-primary" type="submit">검색</button>
+            <input type="text" class ="btn" name="search_button" value="{{keyword}}" style="width:300px; background-color: rgb(242, 242, 242); border: 1px solid #DDDDDD;" onfocus="this.placeholder=''" onblur="this.placeholder='관련 해시태그 검색'">
+            <button class="btn text-white" style="background-color:#324028;" type="submit">검색</button>
+           
+          
         </form>
         <p></p>
     </div>
 
         <div class="container">
             {% for sca in posts %}
-                <div class="card">
+                <div class="card" style="border: 2px solid #734A32; border-radius:10px;">
                     <div class="card-body" onclick="location.href='/scainfo/detail/{{sca.id}}'">
                         {% comment %} <p>{{sca.id}}</p> {% endcomment %}
                         <h4 class="card-title">{{sca.name}} </h4><div class="like">
@@ -123,10 +127,26 @@
     });
 
 </script> {% endcomment %}
+<script src="//ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
 
 <script>
+   
+
+    $(document).ready(function() {
+        $('#tmpSelect').change(function() {
+          var result = $('#tmpSelect option:selected').val();
+          if (result == '2') {
+            $('.div1').show();
+          } else {
+            $('.div1').hide();
+          }
+        }); 
+      });
+   
     function btn(){
-        swal("찜 완료");}
+        alert("찜 완료");}
+
+    
 </script>
  
 </body>
