--- a/scainfoapp/templates/scainfoapp/sort_star.html
+++ b/scainfoapp/templates/scainfoapp/sort_star.html
@@ -7,6 +7,7 @@
         <title>스터디카페 목록</title>
         <link rel="stylesheet" href='/static/css/home.css'>
         <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     </head>
     <body>
         <div class="home">
@@ -15,24 +16,24 @@
         
         <div class="sort" align="right">
             <select title="" onchange="window.location.href=this.value">
-                <option value="/scainfo/all/">기본 순</option>                
-                <option value="/scainfo/sort_star/" selected>별점 순</option>
-                <option value="/scainfo/sort_review/">리뷰 많은 순</option>
+                <option id="a" value="/scainfo/all/">기본 순</option>                
+                <option id="b" value="/scainfo/sort_star/" selected>별점 순</option>
+                <option id="c" value="/scainfo/sort_review/">리뷰 많은 순</option>
             </select>
         </div>
 
         <div class="tag" align="left">
         <form method='post' action='{% url 'hashtag' %}'>
             {% csrf_token %}
-            <input type="text" name="search_button" placeholder="관련 해시태그 검색 (ex) #노트북존" style="width:300px; background-color: rgb(242, 242, 242)" onfocus="this.placeholder=''" onblur="this.placeholder='관련 해시태그 검색'">
-            <button class="btn btn-primary" type="submit">검색</button>
+            <input type="text" class ="btn" name="search_button" placeholder="관련 해시태그 검색 (ex) #노트북존" style="width:300px; background-color: rgb(242, 242, 242); border: 1px solid #DDDDDD;" onfocus="this.placeholder=''" onblur="this.placeholder='관련 해시태그 검색'">
+            <button class="btn text-white" style="background-color:#324028;" type="submit">검색</button>
         </form>
         <p></p>
     </div>
 
         <div class="container">
             {% for sca in posts %}
-                <div class="card">
+                <div class="card" style="border: 2px solid #734A32; border-radius:10px;">
                     <div class="card-body" onclick="location.href='/scainfo/detail/{{sca.id}}'">
                         <h4 class="card-title">{{sca.name}} </h4><div class="like" align="right">
                             <form method='post' action=''>
@@ -100,7 +101,7 @@
 
                     <script>
                         function btn(){
-                            swal("찜 완료");}
+                            alert("찜 완료");}
                     </script>
                 </body>
             </html>
