--- a/accounts/templates/main.html
+++ b/accounts/templates/main.html
@@ -3,7 +3,8 @@
 <html lang="ko">
 <head>
     <title>SCA CONNECT</title>
-    <link href="static/main.css" rel="stylesheet" type="text/css" />
+    <link href="static/main.css" rel="stylesheet" type="text/css"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
     <header id="header">
@@ -36,9 +37,27 @@
     </section>
     
     <div class="sec">
-        <h2>지역별로 찾아보기</h2>
-        <br>
-        <p>추가 예정<br><br><br><br><br><br><br><br></p>
+        <div class="ment" style="text-align: center; color: white;"><h3>이런 스터디카페는 어떠세요?</h3></div><br>
+        <div class="cardlist" style="display: flex; display: flex; justify-content: center; gap: 20px;">
+            <a href=# class="card" style="width: 18rem; text-decoration: none;">
+                <img src="/static/studycafe_예비사진.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text" style="color: black;">스터디카페명</p>
+                </div>
+            </a>
+            <a href=# class="card" style="width: 18rem; text-decoration: none;">
+                <img src="/static/studycafe_예비사진.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text" style="color: black;">스터디카페명</p>
+                </div>
+            </a>
+            <a href=# class="card" style="width: 18rem; text-decoration: none;">
+                <img src="/static/studycafe_예비사진.png" class="card-img-top" alt="...">
+                <div class="card-body">
+                    <p class="card-text" style="color: black;">스터디카페명</p>
+                </div>
+            </a>
+        </div>
     </div>
     
     <script>
@@ -63,7 +82,7 @@
             header.style.top = value * .5 + 'px';
         })
     </script>
-    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
 {% endblock %}
