스카별 리뷰 기능

--- a/review/templates/review_list.html
+++ b/review/templates/review_list.html
@@ -63,7 +63,7 @@
 
 <div class = "row">
     <div class = "col-12">
-        <button class="btn text-white" style="background-color:  #734A32;" onclick = "location.href = '/review/write/'">리뷰쓰기</button>
+        <button class="btn text-white" style="background-color:  #734A32;" onclick = "location.href = '/review/write/{{studycafe.id}}'">리뷰쓰기</button>
     </div>
 </div>
 {% endblock %}
