--- a/scainfoapp/templates/scainfoapp/sca_detail.html
+++ b/scainfoapp/templates/scainfoapp/sca_detail.html
@@ -63,8 +63,8 @@
 
                         <p><img class="reviewbtn" src="/static/image/review.png">리뷰 :
                             {{studycafe.review}} </p>
-                        <button onclick="location.href='/review/write'">리뷰 쓰기</button >
-                            <button onclick="location.href='/review/list'">리뷰 보기</button >
+                        <button onclick="location.href='/review/write/{{studycafe.id}}'">리뷰 쓰기</button >
+                            <button onclick="location.href='/review/list/{{studycafe.id}}'">리뷰 보기</button >
 
                                 
 {% comment %} 
