정렬창기능작동

--- a/scainfoapp/templates/scainfoapp/has_sort_review.html
+++ b/scainfoapp/templates/scainfoapp/has_sort_review.html
@@ -20,7 +20,7 @@
 
                     <option id="a" value="1">기본 순</option>
                     <option id="b" value="2">별점 순</option>
-                    <option id="c" value="3">리뷰 많은 순</option>
+                    <option id="c" value="3" selected>리뷰 많은 순</option>
 
                 </select>
        
