--- a/scainfoapp/templates/scainfoapp/has_sort_star.html
+++ b/scainfoapp/templates/scainfoapp/has_sort_star.html
@@ -19,7 +19,7 @@
                 <select title="" name="sort_button" onchange="this.form.submit()" id="testSelect">
 
                     <option id="a" value="1">기본 순</option>
-                    <option id="b" value="2">별점 순</option>
+                    <option id="b" value="2" selected>별점 순</option>
                     <option id="c" value="3">리뷰 많은 순</option>
 
                 </select>
