--- a/scainfoapp/templates/scainfoapp/all.html
+++ b/scainfoapp/templates/scainfoapp/all.html
@@ -17,7 +17,7 @@
         <h2 style="text-align: center;">스터디카페 목록</h2>
         <div class="sort" align="right">
         <select title="" onchange="window.location.href=this.value">
-            <option id="a" value="/scainfo/all/">기본 순</option>
+            <option id="a" value="/scainfo/all/" selected>기본 순</option>
             <option id="b" value="/scainfo/sort_star/">별점 순</option>
             <option id="c" value="/scainfo/sort_review/">리뷰 많은 순</option>
         </select>
