--- a/scainfoapp/templates/scainfoapp/sort_star.html
+++ b/scainfoapp/templates/scainfoapp/sort_star.html
@@ -58,7 +58,7 @@
                             </div>
                         </div>
 
-                        <p>리뷰 :
+                        <p>카카오맵 리뷰 수 :
                             {{sca.review}} 
                             {% comment %} <button onclick="location.href='/review/write'">리뷰 쓰기</button > {% endcomment %}
                             </p>
