--- a/review/templates/review_list.html
+++ b/review/templates/review_list.html
@@ -1,69 +1,85 @@
 {% extends 'base.html' %}
 {% block contents %}
-
 <head>
     <link href="/static/font1.css" type="text/css" rel="stylesheet">
 </head>
-
-<div class = "row mt-5">
-    <div class = "col-12">
-        <table class = "table table-hover">
-            <thead class="table text-white" style="background-color: #734A32">
-                <tr>
-                    <th>번호</th>
-                    <th>작성자</th>
-                    <th>리뷰내용</th>
-                    <th>작성시간</th>
-                </tr>
-            </thead>
-            <tbody class = "text-dark">
-                {% for review in reviews %}
-                <tr onclick = "location.href = '/review/detail/{{review.id}}'">
-                    <th>{{review.id}}</th>
-                    <th>{{review.writer}}</th>
-                    <th>{{review.contents}}</th>
-                    <th>{{review.registered_date}}</th>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
+<body>
+    <div class="top-bar"
+        style="position: fixed; top: 0;
+                left: 0;
+                width: 100%;
+                background-color: white;
+                color: #324028;
+                padding: 10px;
+                z-index: 9999;
+                height: 70px;
+                border-bottom: 1px solid gainsboro;">
+        <a href="/"><img class="home-btn" src="/static/home-img.png"
+            style="display:block; position: absolute; top: 20px; right: 50px; left: 34px; width: 30px; height: 30px; background-size: cover;"/></a>        
+        <h2 style="margin-left: 80px; margin-top: 5px;">리뷰</h2>
     </div>
-</div>
-<div class = "row mt-2">
-    <div class = "col-12">
-        <nav>
-            <ul class = "pagination justify-content-center">
-                {% if boards.has_previous %}
-                    <li class = "page-item">
-                        <a class = "page-link" href = "?p={{reviews.previous_page_number}}">이전으로</a>
-                    </li>
-                {% else %}
-                    <li class = "page-item disabled">
-                        <a class = "page-link disabled" href = "#">이전으로</a>
-                    </li>
-                {% endif %}
-
-                <li class = "page-item active">
-                    <a class = "page-link" style="background-color: #734A32; border:none" >{{reviews.number}}/{{reviews.paginator.num_pages}}</a>
-                </li>
-
-                {% if reviews.has_next %}
-                    <li class = "page-item">
-                        <a class = "page-link" href = "?p={{reviews.next_page_number}}">다음으로</a>
-                    </li>
-                {% else %}
-                    <li class = "page-item disabled">
-                        <a class = "page-link disabled" href = "#">다음으로</a>
-                    </li>
-                {% endif %}
-            </ul>
-        </nav>
+    <div class="container" style="margin-top: 150px;">
+        <div class = "row mt-5" style="display: flex; justify-content: center;">
+            <div class = "col-10">
+                <table class = "table table-hover">
+                    <thead class="table text-white" style="background-color: #734A32">
+                        <tr>
+                        <th>번호</th>
+                        <th>작성자</th>
+                        <th>리뷰내용</th>
+                        <th>작성시간</th>
+                        </tr>
+                    </thead>
+                    <tbody class = "text-dark">
+                        {% for review in reviews %}
+                        <tr onclick = "location.href = '/review/detail/{{review.id}}'">
+                            <th>{{review.id}}</th>
+                            <th>{{review.writer}}</th>
+                            <th>{{review.contents}}</th>
+                            <th>{{review.registered_date}}</th>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div class = "row mt-2">
+            <div class = "col-12">
+                <nav>
+                    <ul class = "pagination justify-content-center">
+                        {% if boards.has_previous %}
+                            <li class = "page-item">
+                                <a class = "page-link" href = "?p={{reviews.previous_page_number}}">이전으로</a>
+                            </li>
+                        {% else %}
+                            <li class = "page-item disabled">
+                                <a class = "page-link disabled" href = "#">이전으로</a>
+                            </li>
+                        {% endif %}
+        
+                        <li class = "page-item active">
+                            <a class = "page-link" style="background-color: #734A32; border:none" >{{reviews.number}}/{{reviews.paginator.num_pages}}</a>
+                        </li>
+        
+                        {% if reviews.has_next %}
+                            <li class = "page-item">
+                                <a class = "page-link" href = "?p={{reviews.next_page_number}}">다음으로</a>
+                            </li>
+                        {% else %}
+                            <li class = "page-item disabled">
+                                <a class = "page-link disabled" href = "#">다음으로</a>
+                            </li>
+                        {% endif %}
+                    </ul>
+                </nav>
+            </div>
+        </div>
+        <div class = "row">
+            <div class = "col-12" style="display: flex; justify-content: center; margin-top: 50px;">
+                <button class="btn text-white" style="background-color:  #734A32;" onclick = "location.href = '/review/write/{{studycafe.id}}'">리뷰쓰기</button>
+            </div>
+        </div>
     </div>
-</div>
+</body>
 
-<div class = "row">
-    <div class = "col-12">
-        <button class="btn text-white" style="background-color:  #734A32;" onclick = "location.href = '/review/write/{{studycafe.id}}'">리뷰쓰기</button>
-    </div>
-</div>
 {% endblock %}
