리뷰 작성 페이지에서 돌아가기 경로 수정 및 지도 마커 수정 중

--- a/review/templates/review_write.html
+++ b/review/templates/review_write.html
@@ -40,7 +40,7 @@
                     {% endfor %}
                     <br>
                     <button type="submit" class="btn text-white" style="background-color:  #734A32;">리뷰쓰기</button>
-                    <button type="button" class="btn text-white" style="background-color:  #734A32;" onclick="location.href='/review/list/{{ review.id }}'">돌아가기</button>
+                    <button type="button" class="btn text-white" style="background-color:  #734A32;" onclick="location.href='/review/list/{{studycafe.id}}'">돌아가기</button>
                 </form>
             </div>
         </div>
