--- a/cafemapapp/templates/cafemapapp/onemarker.html
+++ b/cafemapapp/templates/cafemapapp/onemarker.html
@@ -75,7 +75,7 @@
 
 
             // 마커 이미지의 이미지 주소입니다
-            var imageSrc = "https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png";
+            var imageSrc = "/static/images/marker.png";
 
             //sca.forEach(function (scainfo) { //추가한 코드
                 // 주소로 좌표를 검색합니다
@@ -96,7 +96,7 @@
                         // 마커 이미지의 이미지 크기 입니다
                         var imageSize = new kakao
                             .maps
-                            .Size(34, 50);
+                            .Size(70,70);
 
                         // 마커 이미지를 생성합니다
                         var markerImage = new kakao
