--- a/cafemapapp/templates/cafemapapp/scamap.html
+++ b/cafemapapp/templates/cafemapapp/scamap.html
@@ -82,7 +82,7 @@
             {% endfor %}
 
             // 마커 이미지의 이미지 주소입니다
-            var imageSrc = "https://t1.daumcdn.net/localimg/localimages/07/mapapidoc/markerStar.png";
+            var imageSrc = "/static/images/marker3.png";
 
             // 주소-좌표 변환 객체를 생성합니다
             var geocoder = new kakao
@@ -104,7 +104,7 @@
                         // 마커 이미지의 이미지 크기 입니다
                         var imageSize = new kakao
                             .maps
-                            .Size(34, 50);
+                            .Size(70,70);
 
                         // 마커 이미지를 생성합니다
                         var markerImage = new kakao
