리뷰색상수정

--- a/review/templates/review_write.html
+++ b/review/templates/review_write.html
@@ -9,7 +9,7 @@
                 left: 0;
                 width: 100%;
                 background-color: white;
-                color: #324028;
+                color: #D9D1C7;
                 padding: 10px;
                 z-index: 9999;
                 height: 70px;
@@ -39,8 +39,8 @@
                     {% endif %}
                     {% endfor %}
                     <br>
-                    <button type="submit" class="btn text-white" style="background-color:  #734A32;">리뷰쓰기</button>
-                    <button type="button" class="btn text-white" style="background-color:  #734A32;" onclick="location.href='/review/list/{{studycafe.id}}'">돌아가기</button>
+                    <button type="submit" class="btn text-white" style="background-color:  #D9D1C7;">리뷰쓰기</button>
+                    <button type="button" class="btn text-white" style="background-color:  #D9D1C7;" onclick="location.href='/review/list/{{studycafe.id}}'">돌아가기</button>
                 </form>
             </div>
         </div>
