--- a/review/templates/review_list.html
+++ b/review/templates/review_list.html
@@ -9,7 +9,7 @@
                 left: 0;
                 width: 100%;
                 background-color: white;
-                color: #324028;
+                color: #D9D1C7;
                 padding: 10px;
                 z-index: 9999;
                 height: 70px;
@@ -22,7 +22,7 @@
         <div class = "row mt-5" style="display: flex; justify-content: center;">
             <div class = "col-10">
                 <table class = "table table-hover">
-                    <thead class="table text-white" style="background-color: #734A32">
+                    <thead class="table text-white" style="background-color: #D9D1C7">
                         <tr>
                         <th>번호</th>
                         <th>작성자</th>
@@ -58,7 +58,7 @@
                         {% endif %}
         
                         <li class = "page-item active">
-                            <a class = "page-link" style="background-color: #734A32; border:none" >{{reviews.number}}/{{reviews.paginator.num_pages}}</a>
+                            <a class = "page-link" style="background-color: #D9D1C7; border:none" >{{reviews.number}}/{{reviews.paginator.num_pages}}</a>
                         </li>
         
                         {% if reviews.has_next %}
@@ -76,7 +76,7 @@
         </div>
         <div class = "row">
             <div class = "col-12" style="display: flex; justify-content: center; margin-top: 50px;">
-                <button class="btn text-white" style="background-color:  #734A32;" onclick = "location.href = '/review/write/{{studycafe.id}}'">리뷰쓰기</button>
+                <button class="btn text-white" style="background-color:  #D9D1C7;" onclick = "location.href = '/review/write/{{studycafe.id}}'">리뷰쓰기</button>
             </div>
         </div>
     </div>
