--- a/cafemapapp/templates/cafemapapp/scamap.html
+++ b/cafemapapp/templates/cafemapapp/scamap.html
@@ -13,10 +13,10 @@
             <h2>스터디카페 찾기</h2>
         </div>
 
-        <div class="container" style="margin-top: 150px;">
+        <div class="container" style="margin-top: 100px;">
             <div class="studybtn" align="right">
                 <button onclick="location.href='/scainfo/all/'">목록으로 보기</button>
-                <button onclick="location.href='/study/'">개설 스터디 현황</button>
+                {% comment %} <button onclick="location.href='/study/'">개설 스터디 현황</button> {% endcomment %}
             </div>
         </div>
 
@@ -46,6 +46,19 @@
                 .services
                 .Geocoder();
 
+            // 마커 이미지의 이미지 주소입니다
+            var imageSrc1 = "/static/images/location.png";    
+            
+            // 마커 이미지의 이미지 크기 입니다
+            var imageSize1 = new kakao
+            .maps
+            .Size(65,65);
+
+        // 마커 이미지를 생성합니다
+            var markerImage1 = new kakao
+                .maps
+                .MarkerImage(imageSrc1, imageSize1);
+
 
             geocoder1.addressSearch("{{location.location}}", function (result1, status1) {
 
@@ -57,8 +70,11 @@
                             .LatLng(result1[0].y, result1[0].x);
 
                         var marker1 = new kakao.maps.Marker({
-                            position: coords1
+                            position: coords1, image: markerImage1
                         });
+
+                        // 결과값으로 받은 위치를 마커로 표시합니다
+                        
                         // 마커가 지도 위에 표시되도록 설정합니다
                         marker1.setMap(map);    
 
@@ -82,7 +98,7 @@
             {% endfor %}
 
             // 마커 이미지의 이미지 주소입니다
-            var imageSrc = "/static/images/marker3.png";
+            var imageSrc = "/static/images/marker.png";
 
             // 주소-좌표 변환 객체를 생성합니다
             var geocoder = new kakao
@@ -104,7 +120,7 @@
                         // 마커 이미지의 이미지 크기 입니다
                         var imageSize = new kakao
                             .maps
-                            .Size(70,70);
+                            .Size(65,65);
 
                         // 마커 이미지를 생성합니다
                         var markerImage = new kakao
