--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -3,6 +3,8 @@
         {% for post in paginated_list %}
             <div class="post">
                 <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+                <h5>글쓴이: {{ post.author }}</h5>
+                <hr>
                 <p>장소 | {{ post.study_place|linebreaksbr }}</p>
                 <p>날짜 | {{ post.study_day|linebreaksbr }}</p>
                 <p>시간 | {{ post.start_time|linebreaksbr }}~{{ post.end_time|linebreaksbr }}</p>
