--- a/review/templates/review_write.html
+++ b/review/templates/review_write.html
@@ -9,7 +9,7 @@
                 left: 0;
                 width: 100%;
                 background-color: white;
-                color: #D9D1C7;
+                color: #324028;
                 padding: 10px;
                 z-index: 9999;
                 height: 70px;
@@ -39,9 +39,9 @@
                     {% endif %}
                     {% endfor %}
                     <br>
-                    <button type="submit" class="btn text-white" style="background-color:  #D9D1C7;">리뷰쓰기</button>
-                    <button type="button" class="btn text-white" style="background-color:  #D9D1C7;" onclick="location.href='/review/list/{{studycafe.id}}'">돌아가기</button>
-                </form>
+                    <button type="submit" class="btn" style="background-color: #D9D1C7; color: black;">리뷰쓰기</button>
+                    <button type="button" class="btn" style="background-color: #D9D1C7; color: black;" onclick="location.href='/review/list/{{studycafe.id}}'">돌아가기</button>
+                </form> 
             </div>
         </div>
     </div>
